--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,8 +1,18 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
-@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
+$height-nav: 70px;
+$material-shadow: 0 2px 2px 0 rgba(0,0,0,.15);
+$border-radius-default: 5px;
+$transition-custom: all 0.3s ease;
+
+$color-font: #384047;
+$color-soft-grey: #999;
 
 body {
   margin: 0;
+  color: $color-font;
   font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
+  a {
+   color: inherit;
+   text-decoration: none;
+  }
 }
