--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -9,6 +9,7 @@ $color-soft-grey: #999;
 body {
   margin: 0;
   color: $color-font;
+  line-height: 1.5em;
   font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   a {
