--- a/src/scss/_modules.scss
+++ b/src/scss/_modules.scss
@@ -1,13 +1,11 @@
 .panel {
-  padding: 100px 0;
+  padding: 100px 0 0 0;
 
   &--bottom {
     background-color: lighten(lightgrey, 7%); // #8dc496
-    // background-color: #8dc496;
     padding: 50px 0 0 0;
     img { margin-bottom: -5px; }
-    // h1 { color: white; text-shadow: 0.5px 0.5px grey; }
-    // p { color: darken(white, 5%);  text-shadow: 0.5px 0.5px black; }
+
   }
 }
 
