--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -1,8 +1,11 @@
 .container {
-  padding-right: 15px;
-  padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+
+  @media screen and (max-width: 768px) {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 
   @media screen and (min-width: 768px) {
     width: 750px;
@@ -17,17 +20,34 @@
   &--building {
     display: flex;
     justify-content: flex-end;
+    transition: all 0.3s ease;
+    @media screen and (max-width: 1300px) {
+      justify-content: center;
+    }
+    @media screen and (max-width: 768px) {
+      img { height: 250px; }
+    }
+    @media screen and (max-width: 450px) {
+      img { height: 175px; }
+    }
   }
 
   &--skills {
+    text-align: center;
 
     h1 { margin: 0 0 0 0 }
-    .el-row { margin-top: 100px; }
-    text-align: center;
-  }
 
-  &--projects {
-    text-align: center;
+    .el-row {
+      margin-top: 100px;
+    }
+
+    .el-col {
+      margin-bottom: 50px;
+    }
+
+    @media screen and (max-width: 768px) {
+      margin-top: 50px;
+    }
   }
 
 }
@@ -40,8 +60,6 @@
   height: 100vh;
   min-height: 100%;
   background: linear-gradient(to bottom, #1e5799 9%, #2989d8 69%, #65ade6 100%);
-  // background: linear-gradient(to bottom, #417dc1, #88bbe4);
-
   color: white;
 
   h2 {
@@ -60,6 +78,9 @@
     &:hover { color: white; opacity: 1;}
   }
 
-  
+  @media screen and (max-width: 768px) {
+    font-size: 0.7em;
+    // justify-content: flex-start;
+  }
 
 }
